Remove server-side changes